# fish-databricks-jobs

./: .gitignore  README.md  publish.sh  pyproject.toml
fish_databricks_jobs/: cli.py  config.py
fish_databricks_jobs/services/: jobs.py  permissions.py  version.py
